--- a/src/components/employees.css
+++ b/src/components/employees.css
@@ -1,9 +1,21 @@
-div .container {
+/* General stylings */ 
+img { border-radius: 10px; }
+.center { text-align: center; }
+.placeholder { border: 0; }
+
+/* Container and Main */
+div.container {
     margin-left: 50px;
     margin-right: 50px;
     max-width: 1250px;
 }
+main {
+    background-color:darkgray;
+    border-radius: 10px;
+    width: 100%;
+}
 
+/* Header and Form */
 div.header {
     padding: 10px;
     border-bottom-right-radius: 10px;
@@ -13,11 +25,7 @@ div.header {
     flex-direction: row;
     justify-content: space-between;
 }
-
-form.head {
-    padding: 15px;
-}
-
+form.head { padding: 15px; }
 input.head {
     border-width: 0;
     border-radius: 5px;
@@ -25,81 +33,49 @@ input.head {
     padding-left: 10px;
 }
 
-footer {
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    width: 100%;
-}
-
-main {
-    background-color:darkgray;
-    border-radius: 10px;
-    width: 100%;
-}
-
+/* Main - Table of results */
 table {
     font-size: 14px;
     border-width: 10px;
     border-color: black;
     color: black;
 }
-
-img {
-    border-radius: 10px;
-}
-
-td, th {
-    padding: 10px 10px;
-}
-
-th.bg-fill {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
+td, th { padding: 10px 10px; }
+th.bg-fill { border-top-left-radius: 10px; border-top-right-radius: 10px; }
 tr#_50 td.bg-fill {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
-.center {
-    text-align: center;
-}
-
 .indent {
     text-align: left;
     padding-left: 20px;
     width: 240px;
 }
-
 .narrow {
     padding: 5px;
     max-width: 60px;
     word-wrap: break-word;
 }
-
-.wide {
-    padding-left: 20px;
-}
-
-.bg-fill {
-    background-color: #ccc;
-}
-
-.placeholder {
-    border: 0;
-}
-
 .empty {
     height: 10px;
     color: darkgray;
     font-size: 8px;
 }
+.wide { padding-left: 20px; }
+.bg-fill { background-color: #ccc; }
 
+
+/* Footer */
+footer {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    width: 100%;
+}
+
+/* Media queries */
 @media screen and (max-width: 400px) {
     div.header { flex-direction: column; }
-
     div.container { margin: 0; }
-
     table, thead, tbody {
         padding: 0;
         display: flex;
@@ -107,13 +83,11 @@ tr#_50 td.bg-fill {
         align-items: center;
         justify-content: center;
     }
-
     td img {
         border-style: solid;
         border-width: 2px;
         border-color: darkred;
     }
-
     tr {
         padding: 0;
         display: flex;
@@ -121,17 +95,14 @@ tr#_50 td.bg-fill {
         justify-content: center;
         align-items: center;
     }
-
     td, th {
         flex: 0 1 auto;
         width: 85px;
         padding: 5px;
     }
-
     .bg-fill {
         background-color: transparent;
     }
-
     .sm-screen {
         display: none;
     }
